--- a/assets/l10n/en.json
+++ b/assets/l10n/en.json
@@ -49,5 +49,8 @@
     "soundpack": "Soundpack",
     "settings": "Settings",
     "about": "About"
+  },
+  "language": {
+    "en": "English"
   }
 }
