--- a/assets/l10n/en.json
+++ b/assets/l10n/en.json
@@ -13,7 +13,8 @@
       },
       "edit": "Edit",
       "duplicate": "Duplicate",
-      "delete": "Delete"
+      "delete": "Delete",
+      "info": "Info"
     },
     "soundpack": {
       "name": "Soundpack Name",
