To show language name in target language. The native will be familiar with it. Filled the gap in zh-CN.json

--- a/assets/l10n/en.json
+++ b/assets/l10n/en.json
@@ -58,7 +58,7 @@
   },
   "language": {
     "en": "English",
-    "zh_CN": "Simplified Chinese"
+    "zh_CN": "简体中文"
   },
   "builtinSoundpack": {
     "default": {
