--- a/calcupiano/assets/l10n/en.json
+++ b/calcupiano/assets/l10n/en.json
@@ -58,7 +58,8 @@
   },
   "language": {
     "en": "English",
-    "zh_CN": "简体中文"
+    "zh_CN": "简体中文 (Simplified Chinese)",
+    "ru": "Русский (Russian)"
   },
   "builtinSoundpack": {
     "default": {
