--- a/calcupiano/assets/l10n/zh-CN.json
+++ b/calcupiano/assets/l10n/zh-CN.json
@@ -58,7 +58,8 @@
   },
   "language": {
     "en": "English",
-    "zh_CN": "简体中文"
+    "zh_CN": "简体中文",
+    "ru": "Русский"
   },
   "builtinSoundpack": {
     "default": {
