--- a/calcupiano/assets/l10n/ru.json
+++ b/calcupiano/assets/l10n/ru.json
@@ -58,7 +58,7 @@
   },
   "language": {
     "en": "English (английский)",
-    "zh_CN": "Simplified Chinese (упрощенный китайский)",
+    "zh_CN": "简体中文 (упрощенный китайский)",
     "ru": "Русский"
   },
   "builtinSoundpack": {
