--- a/calcupiano/assets/l10n/ru.json
+++ b/calcupiano/assets/l10n/ru.json
@@ -57,8 +57,8 @@
     "about": "О программе"
   },
   "language": {
-    "en": "English (английский)",
-    "zh_CN": "简体中文 (упрощенный китайский)",
+    "en": "English",
+    "zh_CN": "简体中文",
     "ru": "Русский"
   },
   "builtinSoundpack": {
