--- a/calcupiano/assets/l10n/ru.json
+++ b/calcupiano/assets/l10n/ru.json
@@ -48,6 +48,10 @@
         "darkMode": "Темная тема",
         "lightMode": "Светлая тема",
         "language": "Язык приложения"
+      },
+      "version": {
+        "name": "Version",
+        "currentVersion": "Current Version"
       }
     }
   },
