--- a/calcupiano/assets/l10n/zh-CN.json
+++ b/calcupiano/assets/l10n/zh-CN.json
@@ -48,6 +48,10 @@
         "darkMode": "深色模式",
         "lightMode": "浅色模式",
         "language": "语言"
+      },
+      "version": {
+        "name": "Version",
+        "currentVersion": "Current Version"
       }
     }
   },
