--- a/calcupiano/assets/l10n/ru.json
+++ b/calcupiano/assets/l10n/ru.json
@@ -51,7 +51,7 @@
       },
       "version": {
         "name": "Version",
-        "currentVersion": "Current Version"
+        "version": "Version"
       }
     }
   },
