I18n for about page.

--- a/calcupiano/assets/l10n/en.json
+++ b/calcupiano/assets/l10n/en.json
@@ -53,6 +53,9 @@
         "name": "Version",
         "version": "Version"
       }
+    },
+    "about": {
+      "title": "About"
     }
   },
   "app": {
