--- a/calcupiano/assets/l10n/ru.json
+++ b/calcupiano/assets/l10n/ru.json
@@ -52,6 +52,9 @@
       "version": {
         "name": "Version",
         "version": "Version"
+      },
+      "about": {
+        "title": "About"
       }
     }
   },
