Added `followingSystem` option in Brightness. Removed version.

--- a/calcupiano/assets/l10n/en.json
+++ b/calcupiano/assets/l10n/en.json
@@ -47,11 +47,8 @@
         "brightness": "Brightness",
         "darkMode": "Dark Mode",
         "lightMode": "Light Mode",
+        "followingSystem": "Following System",
         "language": "Language"
-      },
-      "version": {
-        "name": "Version",
-        "version": "Version"
       }
     },
     "about": {
