use fallback translation

--- a/calcupiano/assets/l10n/en.json
+++ b/calcupiano/assets/l10n/en.json
@@ -58,6 +58,7 @@
   "app": {
     "soundpack": "Soundpack",
     "settings": "Settings",
+    "sheet": "Sheet",
     "about": "About"
   },
   "language": {
